Add `newsCount` parameter to Steam game news widget
